# shader-apply

./: Cargo.toml  README.md
examples/: example.frag  example.wgsl
src/: main.rs  shader.rs  vertex.wgsl  vertex_glsl.wgsl
